--- a/src/Assignment-5/assignment5.html
+++ b/src/Assignment-5/assignment5.html
@@ -12,7 +12,43 @@
 	<div id="container">
 
 	<!-- Start your code from here -->
-	
+
+	<!-- top card -->
+	<div class="card">
+
+		<!-- image side -->
+
+		<section class="pic_side">
+			<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1145795/plant-1.png" alt="plant1" class="top_card">
+		</section>
+
+		<!-- text side -->
+
+		<section class="text_side">
+			<h1>A Leafy One</h1>
+			<p>“There’s no such thing as green thumb or a black thumb, it's more about how much you pay attention to your plant,” says Christopher Satch, plant scientist, instructor at the New York Botanical Garden and board member of the Manhattan Orchid Society. </p>
+			<a href="">So Leafy</a>
+		</section>
+	</div>
+
+	<!-- bottom card -->
+
+	<div class="card">
+
+		<!-- image side -->
+
+		<section class="pic_side">
+			<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1145795/plant-4.png" alt="plant2" class="bottom_card">
+		</section>
+
+		<!-- text side -->
+
+		<section class="text_side">
+			<h1>Some pointy ones</h1>
+			<p>Anything spiky and everyone blames Mexico. Very often, with good reason – the place is full of spiky plants. Nothing makes a statement like this.</p>
+			<a href="">I'll take 10</a>
+		</section>
+	</div>
 
 	<!-- End your code -->
 
