--- a/src/Assignment-3/assignment3.html
+++ b/src/Assignment-3/assignment3.html
@@ -12,6 +12,26 @@
 	<div id="container">
 
 	<!-- Start your code from here -->
+	<div class="box">
+		<div class="left">
+			<h1>Your Best Value Proposition</h1>
+			<p>The quick brown fox jumps over the lazy dog. Wikipedia was launched on January 15, 2001, by Jimmy Wales[7] and Larry Sanger; Sanger coined its name as a blending of "wiki" and "encyclopedia"</p>
+			<button>Start free trial</button>
+		</div>
+		<div class="right">
+			<iframe src="https://www.wikipedia.org/wiki/wikipedia" title="Wikipeida" id="render-wiki"></iframe>
+		</div>
+	</div>
+	<div class="box2">
+		<div class="upper">
+			<h1>Your Best Value Proposition</h1>
+			<p>The quick brown fox jumps over the lazy dog. Wikipedia was launched on January 15, 2001, by Jimmy Wales[7] and Larry Sanger; Sanger coined its name as a blending of "wiki" and "encyclopedia</p>
+			<button>Get Started</button>
+		</div>
+		<div class="lower">
+			<iframe src="https://www.dictionary.com/" title="Dictionary" id="render-dictionary"></iframe>
+		</div>
+	</div>
 	
 	<!-- End your code -->
 
