--- a/src/Assignment-4/assignment4.html
+++ b/src/Assignment-4/assignment4.html
@@ -66,10 +66,10 @@
 	<footer>
 		<h4>Learn About Dogs Online</h4>
 		<ul>
-			<li><img src="images/facebook.svg" alt="facebook"/></li>
-			<li><img src="images/twitter.svg" alt="twitter"/></li>
-			<li><img src="images/instagram.svg" alt="instagram"/></li>
-			<li><img src="images/linkedin.svg" alt="linkedin"/></li>
+			<li><a href="https://www.facebook.com/"><img src="images/facebook.svg.png" alt="facebook"/></a></li>
+			<li><a href="https://twitter.com/?lang=en"><img src="images/twitter.svg.png" alt="twitter"/></a></li>
+			<li><a href="https://www.instagram.com/"><img src="images/instagram.svg.png" alt="instagram"/></a></li>
+			<li><a href="https://www.linkedin.com/"><img src="images/linkedin.svg.png" alt="linkedin"/></a></li>
 		</ul>
 		<a href="https://github.com/turingschool-examples/introductory-static-site" target="_blank" class="link">See this on GitHub</a>
 	</footer>
